testdata/baselines/reference/submodule/conformance/scannerUnicodeEscapeInKeyword2.errors.txt
file1.ts(1,5): error TS1262: Identifier expected. '\u0061wait' is a reserved word at the top-level of a module.
file2.ts(3,5): error TS1262: Identifier expected. '\u{0061}wait' is a reserved word at the top-level of a module.


==== file1.ts (1 errors) ====
    var \u0061wait = 12; // ok
        ~~~~~~~~~~
!!! error TS1262: Identifier expected. '\u0061wait' is a reserved word at the top-level of a module.
    async function main() {
        \u0061wait 12; // not ok
    }
    
    var \u0079ield = 12; // ok
    function *gen() {
        \u0079ield 12; //not ok
    }
    
    type typ\u0065 = 12; // ok
    
    typ\u0065 notok = 0; // not ok
    
    export {};
==== file2.ts (1 errors) ====
    \u{0076}ar x = "hello"; // not ok
    
    var \u{0061}wait = 12; // ok
        ~~~~~~~~~~~~
!!! error TS1262: Identifier expected. '\u{0061}wait' is a reserved word at the top-level of a module.
    async function main() {
        \u{0061}wait 12; // not ok
    }
    
    var \u{0079}ield = 12; // ok
    function *gen() {
        \u{0079}ield 12; //not ok
    }
    
    type typ\u{0065} = 12; // ok
    
    typ\u{0065} notok = 0; // not ok
    
    export {};
    
    const a = {def\u0061ult: 12}; // OK, `default` not in keyword position
    // chrome and jsc may still error on this, ref https://bugs.chromium.org/p/chromium/issues/detail?id=993000 and https://bugs.webkit.org/show_bug.cgi?id=200638
    